# shaperbox-importer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
src/shaperbox_importer/: __init__.py  cli.py
tests/: test_format.py
