[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shaperbox-importer"
version = "0.1.0"
description = "Bulk-import preset packs into Cableguys ShaperBox 3 on macOS."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Phillip Amend" }]
keywords = ["shaperbox", "cableguys", "vst3", "preset", "audio", "music-production"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Free for non-commercial use",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = [
    "pedalboard>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
]

[project.scripts]
shaperbox-import = "shaperbox_importer.cli:main"

[project.urls]
Homepage = "https://github.com/PhillipAmend/shaperbox-importer"
Issues = "https://github.com/PhillipAmend/shaperbox-importer/issues"
Source = "https://github.com/PhillipAmend/shaperbox-importer"

[tool.hatch.build.targets.wheel]
packages = ["src/shaperbox_importer"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length — formatter handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
